config/objects/Artist__c.object
<CustomObject>
    <fields>
        <fullName>Expected_Draw__c</fullName>
        <label>Expected Draw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Cost__c</fullName>
        <label>List Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rock</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Artist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Expected_Draw__c</columns>
        <columns>List_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Artist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>